dark mode bg adjustment & fixed the scrolling bug

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -128,7 +128,7 @@ html {
 
 .dark {
   /* Surfaces */
-  --surface: #0b0b0b;
+  --surface:  rgba(22,22,22,1);
   --surface-secondary: #1b1d27;
   --surface2: blue;
   --accent: #ff2bd6;
